--- a/intex.html
+++ b/intex.html
@@ -9,8 +9,8 @@
 <style>
     *{
         text-align: center;
-        background-color: blueviolet;
-        color: white;
+        background-color: rgb(193, 193, 193);
+        color: rgb(0, 0, 0);
     }
 </style>
 <body>
