--- a/index.html
+++ b/index.html
@@ -7,17 +7,51 @@
     <title>Fase 2</title>
 </head>
 <body>
-    <header>
-        <style>
-        *{
+    <style>
+       body{
+        background-color:blue;
+        background-size: 150%;
+       }
+        header{
         text-align: center;
-        background-color: rgb(0, 0, 0);
-        color: rgb(253, 253, 253);
-        }
-        </style>
+        color: rgb(12, 12, 12);
+        font-size: 35px;
+        font-family: Old English Text MT;
         
+        }
+        nav{
+        text-align: justify;
+        color: rgb(255, 255, 255);
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 30px;
+        font-weight: bold;
+        }
+        h2{
+        text-align: center;
+        color: rgb(255, 255, 255);
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 40px;
+        font-weight: bold;
+        background-color: rgba(0, 0, 0, 0.612);    
+        }
+
+    </style> 
+    <header>
         <h1>Aprendiendo de Box Model</h1>
     </header>
-    
+    <a name="#inicio"></a>
+    <nav>
+        <ul>
+            <a href="#inicio"> Inicio</a>
+            <a href="#Tema">Box Model</a>
+            <a href="#Mockup"> MockUp </a>
+            <a href="Fase 1.html"> Acerca de</a>
+        </ul>
+    </nav>
+    <br>
+    <h2>
+        Justificacion
+    </h2>
+
 </body>
 </html>
