--- a/Fase 1.html
+++ b/Fase 1.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Acerca de</title>
 </head>
+
 <style>
-    *{
+    body{
+        background-color: rgb(255, 255, 255);
+    }
+    h1,h2,h3,p{
         text-align: center;
-        background-color: rgb(193, 193, 193);
+        
         color: rgb(0, 0, 0);
+    }
+    a{
+        text-align: center;
+        background-color: rgb(0, 0, 0);
+        color: rgb(255, 255, 255);
+        font-family: Old English Text MT;
+        font-size: 30px;
     }
 </style>
 <body>
@@ -25,5 +36,8 @@
         Telefono: 3108041589 <br>
         Email: moracles72@gmail.com <br>
     </p>
+    <br>
+    <br>
+    <a href="index.html">Volver a Pagina Principal</a>
 </body>
 </html>
