--- a/Fase 1.html
+++ b/Fase 1.html
@@ -9,18 +9,20 @@
 
 <style>
     body{
-        background-color: rgb(255, 255, 255);
+        background-image: url(b.jpg);
+        background-size: 100%;
+        background-repeat: no-repeat;
     }
     h1,h2,h3,p{
         text-align: center;
         
-        color: rgb(0, 0, 0);
+        color: rgb(255, 255, 255);
     }
     a{
         text-align: center;
-        background-color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.705);
         color: rgb(255, 255, 255);
-        font-family: Old English Text MT;
+        font-family: 'Times New Roman', Times, serif;
         font-size: 30px;
     }
 </style>
@@ -29,7 +31,7 @@
     <h2> Proyecto de Sitio Web 2023 1601 </h2>
     <hr>
     <h3> Cristhian David Mora Forero </h3>
-    <h3> 15 de Febrero de 2023 </h3>
+    <h3> 03 de Marzo de 2023 </h3>
     <hr>
     <p> Mis Datos de contacto Son: <br> 
         Skype: CristhianMora19 <br>
