--- a/index.html
+++ b/index.html
@@ -4,28 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo.css">
     <title>Fase 2</title>
 </head>
 <body>
     <style>
        body{
-        background-color:blue;
-        background-size: 150%;
+        background-image: url(b.jpg);
+        background-size: 100%;
+        background-repeat: no-repeat;
        }
-        header{
-        text-align: center;
-        color: rgb(12, 12, 12);
-        font-size: 35px;
-        font-family: Old English Text MT;
-        
-        }
-        nav{
-        text-align: justify;
-        color: rgb(255, 255, 255);
-        font-family: 'Times New Roman', Times, serif;
-        font-size: 30px;
-        font-weight: bold;
-        }
+
         h2{
         text-align: center;
         color: rgb(255, 255, 255);
@@ -38,20 +27,31 @@
     </style> 
     <header>
         <h1>Aprendiendo de Box Model</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html"> Inicio     </a></li>
+                    <li><a href="tema.html">Box Model      </a></li>            
+                    <li> <a href="mockup.html"> MockUp      </a></li>
+                    <li><a href="Fase 1.html"> Acerca de    </a></li>
+                </ul>
+            </nav>
     </header>
     <a name="#inicio"></a>
-    <nav>
-        <ul>
-            <a href="#inicio"> Inicio</a>
-            <a href="#Tema">Box Model</a>
-            <a href="#Mockup"> MockUp </a>
-            <a href="Fase 1.html"> Acerca de</a>
-        </ul>
-    </nav>
+
     <br>
     <h2>
         Justificacion
     </h2>
-
+    <br>
+    <p>Esta es la pagina principal del desarrollo de la fase 2, la cual debe cumplir con ciertos requerimientos
+        por medio de los cuales se evidencia el proceso en el curso desarrollo de paginas Web es importante tener
+        en cuenta el apoyo tanto en los documentos y videos expuestos por parte del curso, como asi mismo videos 
+        apoyo encontrados en sitios web, de los cuales sirven con el fin de entregar un mejor ejercicio.
+    </p>
+    <br><br>
+    <footer>
+        <p> Desarrollado por Cristhian David Mora Forero &copy; </p>
+        <p> Ultima Actualizacion 04 de Marzo de 2023</p>
+    </footer>
 </body>
 </html>
