--- a/mockup.html
+++ b/mockup.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <style>
+        a{
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.705);
+        color: rgb(255, 255, 255);
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 50px;
+        }
+        img{
+            display: block;
+            margin: auto;
+        }
+        body{
+            background-image: url(b.jpg);
+            background-size: 100%;
+            background-repeat: no-repeat;
+        }
+    </style>
+    <img src="Mockup.png" alt="Imagen de Mockup" width="60%">
+    <br><br><br>
+    <a href="index.html">Volver a Pagina Principal</a>
 </body>
 </html>
