--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="FASE3/Index.html"></a>
+    <a href="FASE3/Index.html">Fase 3</a>
 </body>
 </html>
