--- a/FASE3/Index.html
+++ b/FASE3/Index.html
@@ -5,21 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Estilo.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="CSS/Estilo.css">
 </head>
 <body class="contenedor">
     <header>
         <img src="1200px-Unad_(Colombia)_logo.svg.png" alt="Logo Universidad" height="120px" width="150px">
         <h1>Aprendiendo de Box Model</h1>
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html"> Inicio     </a></li>
-            <li><a href="Temas.html">Temas     </a></li>            
-            <li> <a href="Audio.html"> Audios     </a></li>
-            <li><a href="Nosotros.html"> Nosotros    </a></li>
-        </ul>
-    </nav>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link disable" aria-current="page" href="#">Retornar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Index.html">Inicio</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Nuestros Temas
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="Temas.html">Todo Sobre Box Model</a></li>
+                  <li><a class="dropdown-item" href="tema.html">CSS Grid</a></li>
+                  <li><a class="dropdown-item" href="#">Tema 3</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="Nosotros.html">Nosotros</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <aside>
         <ul>
             <li><a href="index.html">Inicio     </a></li>
@@ -40,9 +64,23 @@
              Normalmente esta compuesta por 4 partes, Content, El Padding
              Border, y margin, estas capas se super ponen unas encima de las otras 
              con el fin de formar el respectivo elemento HTML.
+             <hr>
+            <h3>Que es Css Grid</h3>
+            <p>
+              CSS Grid es un sistema de maquetación web que divide la página en una cuadrícula o rejilla (grid) 
+              a partir de la cual se pueden posicionar los diferentes elementos de manera más sencilla, 
+              versátil y coherente. Su practicidad y sus múltiples ventajas lo han convertido en un estándar. 
+              Es decir, casi cualquier navegador soporta e interpreta este tipo de código.
+              La irrupción de CSS Grid, junto con Flexbox, supuso una revolución en el mundo de la programación 
+              web, ya que permitía realizar con mucho menos código elementos y estructuras que resultaban muy 
+              complejas o directamente imposibles.
+            </p>
             </p>
             <hr>
             <h2> Audios</h2>
+            <hr>
+            <h3> Css Grid</h3>
+            <h3> Audio Andres Rivera</h3>
             <hr>
             <h3> Box Model</h3>
             <h3> Audio Cristhian David Mora</h3>
@@ -55,8 +93,8 @@
 
 
     <footer>
-        <p> Desarrollado por Cristhian David Mora Forero &copy; </p>
-        <p> Ultima Actualizacion 06 de Abril de 2023</p>
-    </footer>
+      <p> Desarrollado por Cristhian David Mora Forero, Andres Felipe Rivera &copy; </p>
+      <p> Ultima Actualizacion 010 de Abril de 2023</p>
+  </footer>
 </body>
 </html>
