--- a/FASE3/Temas.html
+++ b/FASE3/Temas.html
@@ -75,7 +75,7 @@
          
                  <p>
                      Content: es la parte inferior de los elementos HTML, en el cual se contiene la informacion
-                     pricipal tales como Texto, Imagenes, Videos y Demas.
+                     principal tales como Texto, Imagenes, Videos y Demas.
                      <br>
                      <br>
                      Padiding: se habla de un espacio trasparente el cual se utiliza para agregar espacios
@@ -85,7 +85,7 @@
                      Border: conocido como linea o marco que se encuentra rodenado el elemento y es utiizado
                      para agregar estilos o efectos visuales al rededor del contenido
                      <br><br>
-                     Margin: normalmente es utilizada para agregar espacions entre los elementos adyacentes
+                     Margin: normalmente es utilizada para agregar espacios entre los elementos adyacentes
                      se encuentra fuera del borde siendo un espacio trasparente.
                      <br> <br>
          
