--- a/Index.html
+++ b/Index.html
@@ -30,8 +30,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html"> Inicio     </a></li>
-                    <li><a href="fase2/">Fase 2      </a></li> 
-                    <li><a href="FASE3/Index.html">Fase 3      </a></li>            
+                    <li><a href="fase2/Index.html">Fase 2      </a></li> 
+                    <li><a href="FASE3/Index.html">Fase 3      </a></li>
+                    <li><a href="FASE4/Index.html">Fase 4      </a></li>            
                     <li><a href="FASE3/Nosotros.html"> Acerca de    </a></li>
                 </ul>
             </nav>
